--- a/Maf_Project/Maf_Project/Maf_Project.csproj
+++ b/Maf_Project/Maf_Project/Maf_Project.csproj
@@ -55,6 +55,12 @@
     <Compile Include="Form1.designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form_1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form_1.Designer.cs">
+      <DependentUpon>Form_1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form_2.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -71,6 +77,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form_1.resx">
+      <DependentUpon>Form_1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form_2.resx">
       <DependentUpon>Form_2.cs</DependentUpon>
