--- a/Maf_Project/Maf_Project/Maf_Project.csproj
+++ b/Maf_Project/Maf_Project/Maf_Project.csproj
@@ -73,6 +73,12 @@
     <Compile Include="gameplay.Designer.cs">
       <DependentUpon>gameplay.cs</DependentUpon>
     </Compile>
+    <Compile Include="gamers.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="gamers.Designer.cs">
+      <DependentUpon>gamers.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
@@ -86,6 +92,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="gameplay.resx">
       <DependentUpon>gameplay.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="gamers.resx">
+      <DependentUpon>gamers.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
